kubernetes_manifest/oops-backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oopsbackdep
  annotations:
    argocd.argoproj.io/sync-wave: "2" 
spec:
  selector:
    matchLabels:
      app: oopsbackkube
  replicas: 1
  template:
    metadata:
      labels:
        app: oopsbackkube
    spec:
      containers:
      - name: boot-container
        image: kjandgo/oops_log_back:latest # 태깅해야 나중에 k8s에 용이함!
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /member/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /member/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
