kubernetes_manifest/oops-redis-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  annotations:
  argocd.argoproj.io/sync-wave: "1" 
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7.2-alpine
          ports:
            - containerPort: 6379
          args: ["--appendonly", "yes"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          emptyDir: {}  # 임시 저장소 (Pod 삭제 시 데이터 사라짐), {} : 저장소 용량 제한 X
