kubernetes_manifest/oops-backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: oopsbackser
spec:
  type: ClusterIP
  ports:
  - port: 8001
    targetPort: 8080
  selector:
    app: oopsbackkube
