kubernetes_manifest/oops-frontend-svc.yml
apiVersion: v1 
kind: Service
metadata:
  name: oopsfrontser
spec: 
  type: ClusterIP 
  ports:
  - port: 8000 
    targetPort: 80 
  selector:
    app: oopsfrontkube
