kubernetes_manifest/oops-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oops-log-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx  
  rules:
  - http:
      paths:
      - path: /boot(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: oopsbackser
            port: 
              number: 8001
